build-logic/routebinding/routebinding-compiler-plugin/src/test/data/diagnostic/NonComposableFunction.kt
import io.github.reactivecircus.routebinding.runtime.RouteBinding
import kotlin.test.assertEquals

@RouteBinding(DummyRoute::class)
internal fun <!FUNCTION_MUST_BE_COMPOSABLE!>DummyScreen<!>() {
}
